another bug fix?

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: aimpointllconline.com
-title: AimPoin LLC
+title: Aim Point LLC
 email: smbergstedt@aimpointllconline.com
 author: Sylvia Bergstedt
 description: > #Firearms training for everyone.
